[gd_scene load_steps=9 format=3 uid="uid://b5o7la2yoohem"]

[ext_resource type="Theme" uid="uid://cer08boju3mso" path="res://assets/themes/budget_theme.tres" id="1_ag2g4"]
[ext_resource type="Script" uid="uid://cbphs4y7wkoli" path="res://scripts/tag_panel.gd" id="1_nsfro"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_nsfro"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_7gh1m"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7gh1m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rf2vg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_12h55"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ll870"]

[node name="tagPanel" type="Panel"]
custom_minimum_size = Vector2(0, 128)
mouse_filter = 1
theme = ExtResource("1_ag2g4")
theme_type_variation = &"pressed"
script = ExtResource("1_nsfro")

[node name="tagHbox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="frontSeparator" type="VSeparator" parent="tagHbox"]
layout_mode = 2
theme_override_constants/separation = 16
theme_override_styles/separator = SubResource("StyleBoxLine_nsfro")

[node name="nameLabel" type="Label" parent="tagHbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
theme_type_variation = &"nameLabel"
text = "Professional"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="countLabel" type="Label" parent="tagHbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_type_variation = &"priceLabel"
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="separator" type="VSeparator" parent="tagHbox"]
layout_mode = 2
theme_override_constants/separation = 8
theme_override_styles/separator = SubResource("StyleBoxLine_7gh1m")

[node name="tagRect" type="ColorRect" parent="tagHbox"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="tagButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_7gh1m")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rf2vg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_12h55")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ll870")
flat = true
